test/zinc_source/compile_errors/metadata/01_meta_wrong_arity.zn
// expected-error: meta\(\) expects exactly one argument

fn main() {
    print(meta().name)
}
